<resources>
    <string name="app_name">Sano</string>
    <string name="mohon_tunggu_sebentar">Mohon Tunggu Sebentar</string>
    <string name="home">Home</string>
    <string name="settings">Settings</string>
    <!-- TODO: Remove or change this placeholder text -->
    <!--    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>-->
    <string name="cek_kesehatanmu">Siap Untuk Hidup Lebih Sehat?</string>
    <string name="penyakit_jantung">Penyakit Jantung</string>
    <string name="penyakit_stroke">Penyakit Stroke</string>
    <string name="penyakit_diabetes">Penyakit Diabetes</string>
    <string name="tentang_sano">Tentang Sano</string>
    <string name="app_desc">Sano adalah aplikasi yang digunakan untuk mengeksplorasi perpaduan antara perawatan kesehatan dan pembelajaran mesin, karena hal ini menghadirkan banyak peluang untuk memberikan dampak yang berarti bagi kehidupan masyarakat yang dapat memperoleh manfaat dari deteksi dan intervensi dini. Setelah meninjau berbagai pilihan, kami mempersempit fokus kami pada penyakit jantung, stroke, dan diabetes karena prevalensinya dan potensi algoritme pembelajaran mesin untuk membantu diagnosis dini. Secara keseluruhan, aplikasi  Sano ini termotivasi oleh prospek memanfaatkan teknik pembelajaran mesin untuk mengembangkan alat yang dapat membantu dalam identifikasi tepat waktu dari kondisi kesehatan yang kritis ini.</string>
    <string name="bahasa">Bahasa</string>
    <string name="mode_malam">Mode Malam</string>
    <string name="logout">Keluar</string>
    <string name="bagaimana_cara_deteksi">Panduan cara deteksi?</string>
    <string name="cara_deteksi">1. Masukkan data kesehatan yang diperlukan sesuai kondisi kesehatan anda. \n2. Tekan tombol cek kesehatan. \n3. Hasil prediksi akan muncul.</string>
    <string name="keterangan">Gejala Awal Penyakit</string>
    <string name="detect_diabetes_how_desc">1. Poliuria (sering buang air kecil) Meningkatnya kadar gula dalam darah membuat ginjal bekerja lebih keras untuk memfilter dan membuang kelebihan gula melalui urin, sehingga menyebabkan buang air kecil lebih sering.  \n2. Polidipsia (rasa haus yang berlebihan) Akibat dari sering buang air kecil, tubuh kehilangan banyak cairan sehingga menimbulkan rasa haus yang berlebihan.  \n3. Polifagia (nafsu makan yang berlebihan) Meskipun asupan makanan meningkat, sel-sel tubuh tidak dapat menggunakan glukosa dengan baik sehingga menimbulkan rasa lapar terus-menerus.  \n4. Penglihatan kabur Tingginya kadar gula darah dapat menyebabkan perubahan pada lensa mata dan mengakibatkan penglihatan menjadi kabur.  \n5. Luka yang sulit sembuh Tingginya kadar gula darah dapat mengganggu penyembuhan luka karena menghambat sirkulasi darah dan respons inflamasi.  \n6. Kesemutan atau mati rasa Kadar gula darah yang tinggi dalam jangka waktu lama dapat merusak saraf, menyebabkan kesemutan, rasa terbakar, atau mati rasa terutama pada tangan dan kaki.  \n7. Kelelahan dan kurang energi Sel-sel tubuh tidak dapat menggunakan glukosa dengan baik sebagai sumber energi, sehingga menimbulkan rasa lelah dan kurang tenaga.</string>
    <string name="masukan_data">Masukan Data</string>
    <string name="deteksi">Deteksi</string>
    <string name="hasil">HASIL</string>
    <string name="detect_jantung_desc">1. Sesak napas Jika Anda mudah merasa sesak saat melakukan aktivitas ringan seperti berjalan atau menaiki tangga, itu bisa menjadi tanda awal masalah jantung. Nyeri dada (angina)  \n2. Rasa tidak nyaman, terbakar, tertekan, atau nyeri di dada yang mungkin menyebar ke lengan, punggung, rahang, atau leher dapat mengindikasikan penyakit jantung. Kelelahan  \n3. Merasa sangat lelah dan kurangnya energi bahkan setelah beristirahat dapat menjadi gejala awal penyakit jantung. Edema (pembengkakan)  \n4. Pembengkakan di kaki, pergelangan kaki, atau tungkai dapat disebabkan oleh gangguan sirkulasi darah akibat masalah jantung.  \n5. Palpitasi (detak jantung tidak teratur)  \n6. Detak jantung yang terlalu cepat, terlalu lambat, atau tidak teratur dapat menjadi tanda peringatan dini penyakit jantung. Batuk persisten  \n7. Batuk yang terus-menerus dan tidak sembuh-sembuh dapat disebabkan oleh penumpukan cairan di paru-paru akibat masalah jantung.</string>
    <string name="detect_stroke_desc">1. Kelemahan atau kebas pada wajah, lengan, atau kaki secara tiba-tiba, biasanya hanya pada satu sisi tubuh. Kesulitan berbicara atau memahami pembicaraan orang lain. Bicara menjadi pelo atau kacau.  \n2. Gangguan penglihatan pada satu atau kedua mata, seperti penglihatan kabur atau kehilangan penglihatan sebagian.  \n3. Kesulitan berjalan, pusing, kehilangan keseimbangan atau koordinasi tubuh.  \n4. Sakit kepala hebat yang terjadi secara tiba-tiba tanpa penyebab yang jelas.  \n5. Kebingungan atau kesulitan memahami situasi secara mendadak.</string>
    <string name="email">Email</string>
    <string name="sign_in_text">Sign in to Continue</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forget_password">Forget Password?</string>
    <string name="create_account">Create Account</string>
    <string name="sign_up_text">Let\'s Sign Up, and Become Our Family !!</string>
    <string name="username">Username</string>
    <string name="register">Register</string>
    <string name="wellcome">Hello, Wellcome to Sano.</string>
    <string name="app_motto">Disease Condition Predictor</string>
    <string name="logo_sano">logoSano</string>
    <string name="iconLogin">iconLogin\n</string>
    <string name="login_description">Masukkan datamu yaa!</string>
    <string name="register_bot">Don\'t have an account yet?</string>
    <string name="name">Name</string>
    <string name="login_bot">Have an account?</string>
    <string name="age">Age</string>
    <string name="ffpg_final_fasting_plasma_glucose_mg_dl">FFPG (Final Fasting Plasma Glucose) mg/dL</string>
    <string name="fpg_fasting_plasma_glucose_mg_dl">FPG (Fasting Plasma Glucose) mg/dL</string>
    <string name="hdl_high_density_lipoprotein_mg_dl">HDL (High-Density Lipoprotein) mg/dL</string>
    <string name="ldl_low_density_lipoprotein">"LDL (Low-Density Lipoprotein) mg/dL "</string>
    <string name="sbp_systolic_blood_pressure">SBP (Systolic Blood Pressure) mmHg</string>
    <string name="age_jantung">Age</string>
    <string name="troponin_jantung">Troponin</string>
    <string name="kcm_jantung">KCM</string>
    <string name="glucose_jantung">Glucose</string>
    <string name="pressure_height_jantung">Pressure Height</string>
    <string name="pressure_low_jantung">Pressure Low</string>
    <string name="age_stroke">Age</string>
    <string name="average_glucose_level">Average Glucose Level</string>
    <string name="smoking_status_tidak_pernah_pernah_aktif">Smoking Status *(Pernah/Tidak Pernah)</string>
    <string name="hypertension_ya_tidak">Hypertension *(Ya/Tidak)</string>
    <string name="heart_disease_ya_tidak">Heart Disease *(Ya/Tidak)</string>
    <string name="confPassword">Confirm Password</string>
    <string name="diabetes_risk">Diabetes Risk : </string>
    <string name="suggestion">Suggestion : </string>
    <string name="label">Label : </string>
    <string name="heart_disease_risk">Heart Disease Risk : </string>
    <string name="stroke_risk">Stroke Risk : </string>
    <string name="register_button">Register</string>
    <string name="login_button">Login</string>
    <string name="pilih_penyakitmu">Mulai Untuk Cek Kesehatanmu</string>
</resources>