<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:overScrollMode="never"
    android:scrollbarSize="0dp"
    tools:context=".views.home.HomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="240dp"
            android:background="@drawable/ic_wall"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="270dp"
                android:layout_height="140dp"
                android:src="@drawable/ic_home" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/cek_kesehatanmu"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="36dp"
            android:text="@string/pilih_penyakitmu"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

        <Button
            android:id="@+id/btn_detect_jantung"
            android:layout_width="0dp"
            android:layout_height="56dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="14dp"
            android:layout_marginEnd="270dp"
            android:background="@drawable/menu_bg"
            android:text="@string/penyakit_jantung"
            android:textAllCaps="false"
            android:textSize="12sp"
            android:textColor="@color/btnColor"
            android:textStyle="bold"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <Button
            android:id="@+id/btn_detect_stroke"
            android:layout_width="0dp"
            android:layout_height="56dp"
            android:layout_marginStart="120dp"
            android:layout_marginTop="14dp"
            android:layout_marginEnd="150dp"
            android:background="@drawable/menu_bg"
            android:text="@string/penyakit_stroke"
            android:textAllCaps="false"
            android:textSize="12dp"
            android:textColor="@color/btnColor"
            android:textStyle="bold"
            android:textAlignment="center"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/btn_detect_jantung" />

        <Button
            android:id="@+id/btn_detect_diabetes"
            android:layout_width="0dp"
            android:layout_height="56dp"
            android:layout_marginStart="120dp"
            android:layout_marginTop="14dp"
            android:layout_marginEnd="27dp"
            android:background="@drawable/menu_bg"
            android:text="@string/penyakit_diabetes"
            android:textSize="12dp"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textStyle="bold"
            android:textColor="@color/btnColor"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/btn_detect_stroke" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="15dp"
            android:text="@string/tentang_sano"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_detect_stroke" />

        <TextView
            android:id="@+id/textview3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="19dp"
            android:text="@string/app_desc"
            android:textSize="13dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>