<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:overScrollMode="never"
    android:background="@drawable/ic_wall2"
    android:scrollbarSize="0dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".views.jantung.JantungActivity">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/materialToolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#273439"
            android:minHeight="?attr/actionBarSize"
            android:layout_marginBottom="16dp"
            app:titleTextColor="@color/lightGray"/>

        <include layout="@layout/jantung_header" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="4dp"
            android:text="@string/age_jantung" />

        <EditText
            android:id="@+id/et_age"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:maxLength="10"
            android:textColorHint="@color/etHint"
            android:layout_marginHorizontal="32dp"
            android:background="@drawable/et_bg"
            android:padding="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="4dp"
            android:text="@string/troponin_jantung" />

        <EditText
            android:id="@+id/et_tro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:maxLength="10"
            android:textColorHint="@color/etHint"
            android:layout_marginHorizontal="32dp"
            android:background="@drawable/et_bg"
            android:padding="12dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="4dp"
            android:text="@string/kcm_jantung" />

        <EditText
            android:id="@+id/et_kcm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:maxLength="10"
            android:textColorHint="@color/etHint"
            android:layout_marginHorizontal="32dp"
            android:background="@drawable/et_bg"
            android:padding="12dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="4dp"
            android:text="@string/glucose_jantung" />

        <EditText
            android:id="@+id/et_glu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:maxLength="10"
            android:textColorHint="@color/etHint"
            android:layout_marginHorizontal="32dp"
            android:background="@drawable/et_bg"
            android:padding="12dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="4dp"
            android:text="@string/pressure_height_jantung" />

        <EditText
            android:id="@+id/et_ph"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:maxLength="10"
            android:textColorHint="@color/etHint"
            android:layout_marginHorizontal="32dp"
            android:background="@drawable/et_bg"
            android:padding="12dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="4dp"
            android:text="@string/pressure_low_jantung" />

        <EditText
            android:id="@+id/et_pl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:maxLength="10"
            android:textColorHint="@color/etHint"
            android:layout_marginHorizontal="32dp"
            android:background="@drawable/et_bg"
            android:padding="12dp" />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_marginTop="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="visible" />

        <Button
            android:id="@+id/btn_detect"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginTop="25dp"
            android:layout_marginHorizontal="32dp"
            android:layout_marginBottom="20dp"
            android:text="@string/deteksi"
            android:textSize="18sp"
            android:textAllCaps="false"
            android:textColor="@color/lightGray"
            android:background="@drawable/menu_bg"/>

        <TextView
            android:id="@+id/result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="32dp"
            android:layout_marginTop="10dp"
            android:text="@string/hasil"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="18sp"
            android:textAlignment="center"
            android:visibility="gone"
            android:background="@drawable/menu_bg"/>

        <TextView
            android:id="@+id/result_disease"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="32dp"
            android:layout_marginTop="20dp"
            android:text="@string/hasil"
            android:textColor="@color/btnColor"
            android:textSize="18sp"
            android:paddingHorizontal="8dp"
            android:paddingTop="21dp"
            android:background="@drawable/et_bg"
            android:padding="12dp"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/result_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="32dp"
            android:layout_marginTop="20dp"
            android:text="@string/hasil"
            android:textColor="@color/btnColor"
            android:textSize="18sp"
            android:paddingHorizontal="8dp"
            android:paddingTop="21dp"
            android:background="@drawable/et_bg"
            android:padding="12dp"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/result_suggestion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="32dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:text="@string/hasil"
            android:textColor="@color/btnColor"
            android:textSize="18sp"
            android:paddingHorizontal="8dp"
            android:paddingTop="21dp"
            android:background="@drawable/et_bg"
            android:padding="12dp"
            android:visibility="gone"/>

    </LinearLayout>
</ScrollView>